# libezw

./: .editorconfig  .gdb_history  .gitignore  .gitmodules  2021-06-07-Note-19-23.xoj  CMakeLists.txt  LICENSE  Makefile  README.md
docs/img/: block-diag.pdf_tex  block-diag.tex  coeff_ezw_tree.sddoc  mapping.sddoc
docs/pres/: A14_ppt.tex  A14_pres.tex  notes.tex
docs/report/: A14_Report.tex  ack.tex  conclusion.tex  impl.tex  introduction.tex  litsurvey.tex
docs/report/bib/: datacompr.bib  wavelets.bib
include/: approx_map.h  bitstream.h  bitstream.h.old  ezw.h  node.h  queue.h  sbtree.h  smap.h  stack.h  utils.h  ztree.h
src/: approx_map.c  bitstream.c  bitstream.c.old  ezw.c  gsl_swap.c  main.c  node.c  queue.c  sbtree.c  smap.c  stack.c  utils.c  ztree.c
utils/: .eggs_wavelet_decomposition-8x8_with_tree.autosave.xopp  eggs-16x16-coeffs-ref.txt  eggs-16x16.xcf  eggs-8x8-coeffs-ref.txt  eggs_16x16_wavelet_decomposition_with_tree.xopp  eggs_16x16_wavelet_decomposition_with_tree.xopp~  eggs_wavelet_decomposition - 16x16.csv  eggs_wavelet_decomposition-8x8_with_tree.xopp  eggs_wavelet_decomposition-8x8_with_tree.xopp~  eggs_wavelet_decomposition-8x8_with_tree_sp.xopp  eggs_wavelet_decomposition-8x8_with_tree_sp.xopp~  get_gscale_raw.py  gsl_swap.c  lichtenstein_gscale_raw.txt  pywt_verif.py
utils/gimp/: eggs-8x8.xcf
utils/imgbin/: gscaleraw2png.py  read_img.py
